[package]
name = "warp-filter-request"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "warp Request filters"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/warp-ext"
homepage = "https://github.com/bk-rs/warp-ext"
documentation = "https://docs.rs/warp-filter-request"
keywords = []
categories = []
readme = "README.md"

[dependencies]
