[package]
name = "warp-filter-request"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "warp Request filters"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/warp-ext"
homepage = "https://github.com/bk-rs/warp-ext"
documentation = "https://docs.rs/warp-filter-request"
keywords = []
categories = []
readme = "README.md"

[dependencies]
warp = { version = "0.3", default-features = false }
bytes = { version = "1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", default-features = false, features = ["client", "http1"] }

futures-util = { version = "0.3" }

portpicker = { version = "0.1" }
