[package]
name = "warp-request-body"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "warp Request Body"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/warp-ext"
homepage = "https://github.com/bk-rs/warp-ext"
documentation = "https://docs.rs/warp-request-body"
keywords = []
categories = []
readme = "README.md"

[dependencies]
warp = { version = "0.3", default-features = false }
bytes = { version = "1", default-features = false }

futures-util = { version = "0.3", default-features = false }
pin-project-lite = { version = "0.2", default-features = false }

hyper-body-to-bytes = { version = "0.1", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

warp-filter-request = { version = "0.2", path = "../warp-filter-request" }

futures-util = { version = "0.3" }
